[REST API] Updated the branch API to be a bit more REST compatible (#4763)
* Updated the branch API to be a bit more REST compatible

* Fix issues with import/export for branches

* Additional fix for branch import/export

* Slight change to the replace-branch-versions operation to work with the go sdk

* Change the return value of replace-branch-versions to be more consistent

* Added a full export/import test.  Made sure it works!

* Fix broken integration tests.

* Rename userDefined to systemDefined for branches

* Tweak the canonical hash import test

* Fix missing classes in the kafkasql message index

* Improved error reporting in kafkasql value deserializer